# Mony-Log

./: pyproject.toml
experiments/message2expense/: main.ipynb  pipeline.ipynb  prompt.py  pyproject.toml  schema.py
features/monylog-shared-kernel-infra-database-sqla/: pyproject.toml
features/monylog-shared_kernel/: README.md  pyproject.toml
features/monylog-shared_kernel-infra-fastapi/: pyproject.toml
features/monylog-shared_kernel/src/monylog/shared_kernel/domain/: value_object.py
features/monylog-shared_kernel/src/monylog/shared_kernel/domain/types/: __init__.py
features/monylog-shared_kernel/src/monylog/shared_kernel/infra/cache/: __init__.py
features/monylog-shared_kernel/src/monylog/shared_kernel/infra/settings/: model.py
projects/monylog-backend/: .env  alembic.ini  pyproject.toml
projects/monylog-backend/data/: monylog.db
projects/monylog-backend/src/monylog/alembic/migrations/: env.py  script.py.mako
projects/monylog-backend/src/monylog/alembic/migrations/versions/: 2025-05-27-1644-f7d9f3e6ac1a-init.py
projects/monylog-backend/src/monylog/backend/: container.py  main.py  settings.py
projects/monylog-backend/src/monylog/backend/endpoint/rest/: fastapi.py
projects/monylog-backend/src/monylog/backend/expense/: exceptions.py  use_case.py
projects/monylog-backend/src/monylog/backend/expense/containers/: di.py
projects/monylog-backend/src/monylog/backend/expense/dtos/: request.py  response.py  schemas.py
projects/monylog-backend/src/monylog/backend/expense/entities/: __init__.py  expense.py  log.py  (+1 more)
projects/monylog-backend/src/monylog/backend/llm/: exceptions.py
projects/monylog-backend/test/: test_llm.py
(+21 files in other folders)
