[project]
name = "message2expense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "langchain-core>=0.3.61",
    "langchain-openai>=0.3.18",
    "pendulum>=3.1.0",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.11",
]
